libcasswrapper (1.1.1.0~xenial) xenial; urgency=high

  * Fixed the removal of queries that were worked on.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 28 Jan 2016 03:43:28 -0700

libcasswrapper (1.1.0.2~xenial) xenial; urgency=high

  * Added qt5 QSql support for Cassandra.

 -- R. Douglas Barbieri <doug@dooglio.net>  Sun, 08 Oct 2017 16:34:56 -0700

libcasswrapper (1.0.5.0~xenial) xenial; urgency=high

  * SNAP-181: Updated the code to work with the new libexcept: no Qt.
  * Various clean ups.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 21 Jan 2017 03:05:33 -0700

libcasswrapper (1.0.4.0~xenial) xenial; urgency=high

  * Bumped copyright date.
  * Fixed a few headers.

 -- Alexis Wilke <alexis@m2osw.com>  Thu,  5 Jan 2017 00:11:33 -0700

libcasswrapper (1.0.3.0~xenial) xenial; urgency=high

  * SNAP-258: Added stacktracing ability to exception base.

 -- R. Douglas Barbieri <doug@dooglio.net>  Sun, 11 Dec 2016 10:52:15 -0800

libcasswrapper (1.0.2.0~xenial) xenial; urgency=high

  * SNAP-506: Testing with version 2.5 instead of 2.5.0-1.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 17 Nov 2016 20:37:33 -0700

libcasswrapper (1.0.1.0~xenial) xenial; urgency=high

  * SNAP-506: Fixed version of cassandra-cpp-driver dependency.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 17 Nov 2016 18:02:33 -0700

libcasswrapper (1.0.0.0~xenial) xenial; urgency=high

  * SNAP-506: refactored legacy QtCassandra code out into libsnapwebsites.
  * Better encapsulation of cassandra-cpp-driver code.

 -- R. Douglas Barbieri <doug@dooglio.net>  Sat, 05 Nov 2016 09:24:11 -0700
