@@ -9,7 +9,7 @@
  *      See each function below.
  *
  * License:
- *      Copyright (c) 2011-2017 Made to Order Software Corp.
+ *      Copyright (c) 2011-2018  Made to Order Software Corp.  All Rights Reserved
  *
  *      http://snapwebsites.org/
  *      contact@m2osw.com
